lab1/Test/L1-A-7-24.output
Error Type A at Line 12
Error Type A at Line 29
Error Type A at Line 37
Error Type A at Line 45
Error Type A at Line 57
